[package]
name = "iex_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-parser = { version = "0.14.0", features = ["data"] }
bytes = { version = "1.2.1" }
hex = "0.4.3"
byteorder = "1.4.3"
serde = { version = "1.0.145", features =["derive"]}
bincode = "1.3.3"
time = { version = "0.2.16", features =["serde"]}
chrono = { version = "0.4.22", features =["serde"]}